# ReferenceNotes

./: README.md
c++/: CMakeLists.txt  README.md  run.sh
c++/control_flow/: CMakeLists.txt  control_flow_loops.cpp  if_else_and_switch_statements.cpp  jump_statements.cpp
c++/data_types/: README.md  arrays.cpp  casting.cpp  strings.cpp  structures.cpp
c++/data_types/comparison_of_common_data_types/: _helper.cpp  _helper.h  comparison_of_common_data_types.cpp
c++/dependency_injection/: CMakeLists.txt  README.md  dependency_injection.cpp
c++/design_patterns/: CMakeLists.txt  abstract_factory_pattern.cpp  decorator_pattern.cpp  factory_method_pattern.cpp  observer_pattern_pull.cpp  observer_pattern_push.cpp  strategy_pattern.cpp
c++/dynamic_memory/: README.md
c++/exception_handling/: exception_handling.cpp
c++/functions/: functions.cpp
c++/interface_vs_base_class/: CMakeLists.txt  interface_vs_base_class.cpp
c++/oop/: README.md  oop_polymorphism.cpp
c++/operators/: CMakeLists.txt  operators.cpp
c++/stl/: CMakeLists.txt  README.md
c++/stl/algorithms/: numeric_algorithms.cpp
c++/stl/containers_and_data_structures/: maps.cpp  queues.cpp  stacks.cpp
c++/working_with_external_data/: command_line_interface.cpp  working_with_files.cpp
data_types/: CMakeLists.txt  initialization.cpp  pointers_and_references.cpp
dynamic_memory/: CMakeLists.txt  dynamic_memory.cpp
exception_handling/: CMakeLists.txt
functions/: CMakeLists.txt  lambda_functions.cpp  template_functions.cpp
oop/: CMakeLists.txt  oop_basics.cpp  oop_copy_depth.cpp  oop_inheritance.cpp  template_classes.cpp
python/: README.md  binary.py  dependency_injection.py  interface_vs_base_class.py  property_decorator.py
python/design_patterns/: README.md  decorator_pattern.py  decorator_pattern_practice.py  factory_abstract_pattern.py  factory_abstract_pattern_practice.py  factory_method_pattern.py  factory_method_pattern_practice.py  factory_simple.py  not_strategy.py  observer_pattern.py  observer_pattern_practice.py  strategy.py  strategy_pattern_practice.py
scratch_notes/: README.md
stl/: CMakeLists.txt
stl/algorithms/: modifying_algorithms.cpp  non_modifying_algorithms.cpp  sorting_algorithms.cpp
stl/containers_and_data_structures/: iterators.cpp  lists.cpp  sets.cpp  vectors.cpp
working_with_external_data/: CMakeLists.txt  SomeText.txt
