cmake_minimum_required(VERSION 3.28)

set(CMAKE_CXX_STANDARD 98)

add_executable(oop_basics oop_basics.cpp)
add_executable(oop_copy_depth oop_copy_depth.cpp)
add_executable(oop_inheritance oop_inheritance.cpp)
add_executable(oop_polymorphism oop_polymorphism.cpp)
add_executable(template_classes template_classes.cpp)
