cmake_minimum_required(VERSION 3.28)

set(CMAKE_CXX_STANDARD 98)

add_executable(decorator_pattern decorator_pattern.cpp)
add_executable(observer_pattern_pull observer_pattern_pull.cpp)
add_executable(observer_pattern_push observer_pattern_push.cpp)
add_executable(strategy_pattern strategy_pattern.cpp)
